implementing styles and adding font

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,1 @@
-body { background-color:black; }
+body { background-color:black; font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif; }
