--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
-body { background-color:black; font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif; }
+body { background-color:black; font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif !important; }
 
-div#page { border:0; }
+div#page { border:0; position:relative; top:-15px; }
 div.ss-controls { display:none; }
-div.title-bar { width:900px; position:relative; clear:both; height:68px; margin-left:auto; margin-right:auto; margin-top:15px; }
+div.title-bar, div.contentII { position:relative; clear:both; margin-left:auto; margin-right:auto; }
+div.title-bar { height:68px; margin-top:15px; }
+div.contentII { height:85px; z-index:1002; padding:0; }
 
 div.slideshow-mask { display:none; position:relative; width:100%; height:100%; z-index:1001; border:0; }
 
 div.photo-website-album div.navigation-container { }
 
+div.photo-website-menu { position:relative; left:30px; }
 div.photo-website-menu div.navigation-container { display:none; }
 div.photo-website-menu div.caption-container { display:none; }
 div.photo-website-menu div.controls { display:none; }
